[package]
name = "more-changetoken"
version = "2.0.0"
edition = "2018"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for change tokens"
keywords = ["more", "change", "token"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/commonsensesoftware/more-rs-changetoken"
include = ["src/*.rs", "README.md"]

[lib]
name = "tokens"
path = "src/lib.rs"