[package]
name = "more-changetoken"
version = "2.0.0"
edition = "2018"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for change tokens"
keywords = ["more", "change", "token"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-changetoken/"
repository = "https://github.com/commonsensesoftware/more-rs-changetoken"
include = ["src/*.rs", "README.md"]

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "tokens"
path = "src/lib.rs"

[features]
fs = ["notify"]

[dependencies]
notify = { version = "6.1", optional = true }

[dev-dependencies.more-changetoken]
path = "."
default-features = false
features = ["fs"]